--- a/fcon/main/templates/main/base.html
+++ b/fcon/main/templates/main/base.html
@@ -11,7 +11,7 @@
                 top: 0;
                 left: 0;
                 overflow-x: hidden;
-                background-color: #4E45FC;
+                background-color: #130477;
                 padding-top: 35px;
                 
             }
@@ -20,7 +20,7 @@
                 padding: 6px 8px 6px 16px;
                 text-decoration: none;
                 font-size: 30px;
-                color: blue;
+                color: #C5BAFD;
             }
 
             .sidenav a:hover {
@@ -41,8 +41,7 @@
 
         <div class="sidenav">
             <a href="/">Home Page</a>
-            <a>Test nav</a>
-            <a>second test</a>
+            <a href="/create">New Reckoning</a>
         </div>
 
         <div class="main">
