page listing all sheets added

--- a/fcon/main/templates/main/base.html
+++ b/fcon/main/templates/main/base.html
@@ -42,6 +42,7 @@
         <div class="sidenav">
             <a href="/">Home Page</a>
             <a href="/create">New Reckoning</a>
+            <a href="/sheets">My Reckonings</a>
         </div>
 
         <div class="main">
