--- a/fcon/main/templates/main/reckon.html
+++ b/fcon/main/templates/main/reckon.html
@@ -6,6 +6,8 @@
         <form method="post", action="/reckon/{{view.name}}">
             {% csrf_token %}
             <button type="submit", name="delete", value="{{view.name}}">Delete this sheet</button>
+            <button type="submit", name="addperson", value="{{view.name}}">Add a new person to the sheet</button>
+            <button type="submit", name="additem", value="{{view.name}}">Add new item to the sheet</button>
         </form>
         
     </div>
