spliting expenses after adding item

--- a/fcon/main/templates/main/reckon.html
+++ b/fcon/main/templates/main/reckon.html
@@ -34,8 +34,8 @@
             </div>
             <div>
                 <h3>Items</h3>
-                {% for it in items %}
-                    <p>{{it.name}}: {{it.value}} - {{it.person}}</p>
+                {% for i in items %}
+                    <p>{{i.name}}: {{i.value}} - {{i.person}}</p>
                 {% endfor %}
             </div>
         </form>
