--- a/fcon/main/templates/main/reckon.html
+++ b/fcon/main/templates/main/reckon.html
@@ -6,6 +6,7 @@
         <form method="post", action="/reckon/{{view.name}}">
             {% csrf_token %}
             <button type="submit", name="delete", value="{{view.name}}">Delete this sheet</button>
+            <button type="submit", name="show", value="{{view.name}}">Show transactions</button>
             <div>
                 <p>
                     <input type="text" readonly="readonly" width="40" value="Name">
