--- a/fcon/main/templates/main/reckon.html
+++ b/fcon/main/templates/main/reckon.html
@@ -38,7 +38,7 @@
             <div>
                 <h3>Participants</h3>
                 {% for i in people %}
-                    <p>{{i.name}}: {{i.balance}}</p>
+                    <p>{{i.name}}</p>
                 {% endfor %}
             </div>
             <div>
