--- a/fcon/main/templates/main/reckon.html
+++ b/fcon/main/templates/main/reckon.html
@@ -9,19 +9,13 @@
             <button type="submit", name="show", value="{{view.name}}">Show transactions</button>
             <div>
                 <p>
-                    <input type="text" readonly="readonly" width="40" value="Name">
-                </p>
-                <p>
-                    <input type="text", name="data">
+                    <label for="data">Name</label>
+                    <input type="text", id="data", name="data">
                     <button type="submit", name="addperson", value="{{view.name}}">Add a new person to the sheet</button>                    
                 </p>
-                <div>
-                    <input type="text" readonly="readonly" width="40" value="Buyer">
-                    <input type="text" readonly="readonly" width="40" value="Item">
-                    <input type="text" readonly="readonly" width="40" value="Cost">
-                </div>
                 <p>
-                    <input list="participants" name="pay" width="40">
+                    <label for="pay">Buyer</label>
+                    <input list="participants" id="pay" name="pay" width="40">
 
                     <datalist id="participants">
                         {% for i in people %}
@@ -29,8 +23,11 @@
                         {% endfor %}
                     </datalist>
 
-                    <input type="text", name="item" width="40">
-                    <input type="text", name="value" width="40">
+                    <label for="item">Item</label>
+                    <input type="text", id="item" name="item" width="40">
+
+                    <label for="value">Cost</label>
+                    <input type="text", id="value" name="value" width="40">
 
                     <button type="submit", name="additem", value="{{view.name}}">Add new item to the sheet</button> 
                 </p>            
