--- a/fcon/main/templates/main/transactions.html
+++ b/fcon/main/templates/main/transactions.html
@@ -6,4 +6,9 @@
             <p>{{action.debtor}} gives {{action.value}} to {{action.collector}}</p>
         {% endfor %}
     </div>
+    <p>
+        <form action="/reckon/{{sheet.name}}">
+            <button type="submit" name="go_back">Back</button>
+        </form>
+    </p>
 {% endblock %}
