--- a/fcon/main/templates/main/base.html
+++ b/fcon/main/templates/main/base.html
@@ -4,7 +4,7 @@
 
         <style type="text/css">
             .sidenav {
-                height: 80px;
+                height: 120px;
                 width: 100%;
                 position: fixed;
                 z-index: 1;
@@ -28,11 +28,16 @@
             }
 
             .main {
-                margin-top: 130px;
+                margin-top: 150px;
                 margin-left: 180px;
                 padding: 0px 10px;
             }
         </style>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <title>Friend Reckoning App</title>
     </head>
@@ -52,17 +57,26 @@
             
         </div>
 
-        <div class="main">
-            {% if user.is_authenticated %}
-                {% block content %}
-                base
-                {% endblock %}
-            {% else %}
-            <p>Not logged in</p>
-                {% block log_in %}
-                {% endblock %}
-            {% endif %}
+        <div id="content" class="main">
+            <div class="row justify-content-center">
+                <div class="col-11">
+                    {% if user.is_authenticated %}
+                        {% block content %}
+                            base
+                        {% endblock %}
+                    {% else %}
+                        <p>Not logged in</p>
+                        {% block log_in %}
+                        {% endblock %}
+                    {% endif %}
+                </div>
+            </div>
         </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <body>
 
 </html>
