fancy buttons and labels

--- a/fcon/main/templates/main/base.html
+++ b/fcon/main/templates/main/base.html
@@ -30,8 +30,26 @@
             .main {
                 margin-top: 150px;
                 margin-left: 180px;
+                margin-right: 200px;
                 padding: 0px 10px;
+                border-radius: 10px;
+                background-color: #d4cefd;
             }
+
+            .btn-primary {
+                background-color: #130477 !important;
+            }
+
+            .input-group-text {
+                color: white !important;
+                background-color: #050122 !important;
+            }
+
+            .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
+                background-color: #050122 !important;
+                border-color: #050122 !important;
+            }
+
         </style>
 
         <meta charset="utf-8">
