--- a/fcon/main/templates/main/transactions.html
+++ b/fcon/main/templates/main/transactions.html
@@ -8,7 +8,7 @@
     </div>
     <p>
         <form action="/reckon/{{sheet.name}}">
-            <button type="submit" name="go_back">Back</button>
+            <button type="submit" name="go_back" class="btn btn-primary btn-sm">Back</button>
         </form>
     </p>
 {% endblock %}
