--- a/fcon/main/templates/main/home.html
+++ b/fcon/main/templates/main/home.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <div>
-        <p>Hello <span style="color: {{ col }}">{{user.username}}</span></p>
+        <p>Hello <span style="color: #00ff00">{{user.username}}</span></p>
     </div>
 {% endblock %}
