--- a/fcon/main/templates/main/reckon.html
+++ b/fcon/main/templates/main/reckon.html
@@ -6,38 +6,50 @@
     <div>
         <form method="post", action="/reckon/{{view.name}}">
             {% csrf_token %}
-            <button type="submit", name="delete", value="{{view.name}}">Delete this sheet</button>
-            <button type="submit", name="show", value="{{view.name}}">Show transactions</button>
+            <button type="submit", name="delete", value="{{view.name}}" class="btn btn-primary btn-sm">Delete this sheet</button>
+            <button type="submit", name="show", value="{{view.name}}" class="btn btn-primary btn-sm">Show transactions</button>
         </form>
         
         <div>
             <p>
                 <form method="post", action="/reckon/{{view.name}}">
                     {% csrf_token %}
-                    <label for="data">Name</label>
-                    {{addperson.name}}
-                    <button type="submit", name="addperson", value="{{view.name}}">Add a new person to the sheet</button>  
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <label for="data" class="input-group-text">Name</label>
+                        </div>
+                        {{addperson.name}}
+                        <button type="submit", name="addperson", value="{{view.name}}" class="btn btn-primary btn-sm">Add a new person to the sheet</button>
+                    </div> 
                 </form>
                                     
             </p>
             <p>
                 <form method="post", action="/reckon/{{view.name}}">
                     {% csrf_token %}
-                    <label for="pay">Buyer</label>
                     
-                    <select name="pay" id="pay">
-                        {% for i in people %}
-                            <option value="{{i.name}}">{{i.name}}</option>
-                        {% endfor %}
-                    </select>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <label for="pay" class="input-group-text">Buyer</label>              
+                        </div>
+                        <select name="pay" id="pay">
+                            {% for i in people %}
+                                <option value="{{i.name}}">{{i.name}}</option>
+                            {% endfor %}
+                        </select>
 
-                    <label for="item">Item</label>
-                    {{additem.item}}
+                        <div class="input-group-prepend">
+                            <label for="item" class="input-group-text">Item</label>              
+                        </div>
+                        {{additem.item}}
 
-                    <label for="value">Cost</label>
-                    {{additem.value}}
-
-                    <button type="submit", name="additem", value="{{view.name}}">Add new item to the sheet</button>
+                        <div class="input-group-prepend">
+                            <label for="value" class="input-group-text">Cost</label>                 
+                        </div>
+                        {{additem.value}}
+                        <button type="submit", name="additem", value="{{view.name}}" class="btn btn-primary btn-sm">Add new item to the sheet</button>
+                    </div>
+                    
                 </form>
                     
             </p>            
@@ -54,7 +66,7 @@
                 <h3>Items</h3>
                 {% for i in items %}
                     <p> 
-                        <button type="submit", name="item_delete", value="{{i.name}}">-</button>
+                        <button type="submit", name="item_delete", value="{{i.name}}" class="btn btn-primary btn-sm">-</button>
                         {{i.name}}: {{i.value}} - {{i.person}} for
                         {% for j in debtors %}
                             {% if forloop.counter == forloop.parentloop.counter %}
