prepare for test deploy

--- a/fcon/main/templates/main/base.html
+++ b/fcon/main/templates/main/base.html
@@ -50,6 +50,11 @@
                 border-color: #050122 !important;
             }
 
+            .reckon-forms {
+                background-color: #3f23f6;
+                border-radius: 10px;
+            }
+
         </style>
 
         <meta charset="utf-8">
