typofix-temporary-site-shutdown

--- a/main/templates/main/reckon.html
+++ b/main/templates/main/reckon.html
@@ -71,7 +71,7 @@
                         <th>Action</th>
                         <th>Item name</th>
                         <th>Price</th>
-                        <th>Byuer</th>
+                        <th>Buyer</th>
                         <th>Collectors</th>
                     </tr>
                     {% for i in items %}
