--- a/main/templates/main/debet.html
+++ b/main/templates/main/debet.html
@@ -14,6 +14,7 @@
                                 </label>
                               </div>
                             <input type="text" name="d{{person.name}}">
+                            <label class="input-group-text">%</label>
                         </div>
                 </p>          
             {% endfor %}
