--- a/main/templates/main/transactions.html
+++ b/main/templates/main/transactions.html
@@ -4,9 +4,9 @@
     <div>
         <table class="table table-hover">
             <tr>
-                <th>Pay</th>
+                <th>Debtor</th>
                 <th>Value</th>
-                <th>To</th>
+                <th>Collector</th>
             </tr>
             {% for action in actions %}
                 <tr>
