--- a/main/templates/main/reckon.html
+++ b/main/templates/main/reckon.html
@@ -4,64 +4,101 @@
     <h3>{{view.name}}</h3>
     <hr>
     <div>
-        <form method="post", action="/reckon/{{view.name}}">
-            {% csrf_token %}
-            <button type="submit", name="delete", value="{{view.name}}" class="btn btn-primary btn-sm">Delete this sheet</button>
-            <button type="submit", name="show", value="{{view.name}}" class="btn btn-primary btn-sm">Show transactions</button>
-        </form>
-        
-        <div>
-            <div>
-                <p>
-                    <form method="post", action="/reckon/{{view.name}}">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <label for="data" class="input-group-text">Name</label>
-                            </div>
-                            {{addperson.name}}
-                            <button type="submit", name="addperson", value="{{view.name}}" class="btn btn-primary btn-sm">Add a new person to the sheet</button>
-                        </div> 
-                    </form>
-                                        
-                </p>
-                <p>
-                    <form method="post", action="/reckon/{{view.name}}">
-                        {% csrf_token %}
-                        
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <label for="pay" class="input-group-text">Buyer</label>              
-                            </div>
-                            <select name="pay" id="pay">
-                                {% for i in people %}
-                                    <option value="{{i.name}}">{{i.name}}</option>
-                                {% endfor %}
-                            </select>
-
-                            <div class="input-group-prepend">
-                                <label for="item" class="input-group-text">Item</label>              
-                            </div>
-                            {{additem.item}}
-
-                            <div class="input-group-prepend">
-                                <label for="value" class="input-group-text">Cost</label>                 
-                            </div>
-                            {{additem.value}}
-                            <button type="submit", name="additem", value="{{view.name}}" class="btn btn-primary btn-sm">Add new item to the sheet</button>
-                        </div>
-                        
-                    </form>
-                        
-                </p>            
-            </div>
+        <div class="input-group">
+            <form method="post", action="/reckon/{{view.name}}">
+                {% csrf_token %}
+                <button type="submit", name="delete", value="{{view.name}}" class="btn btn-primary btn-sm">Delete</button>
+            </form>
+            <form method="post", action="/reckon/{{view.name}}">
+                {% csrf_token %}
+                <button type="submit", name="show", value="{{view.name}}" class="btn btn-primary btn-sm">Show transactions</button>
+            </form>
         </div>
-        <div>
+        
+        <p>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#adding-options" aria-expanded="false" aria-controls="adding-options">
+                Add
+            </button>
+        </p>
+        <div class="collapse" id="adding-options">
+            <div class="card card-body">
+                <div>
+                    <div>
+                        <p>
+                            <form method="post", action="/reckon/{{view.name}}">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <label for="data" class="input-group-text">Name</label>
+                                    </div>
+                                    {{addperson.name}}
+                                    <button type="submit", name="addperson", value="{{view.name}}" class="btn btn-primary btn-sm">Add a new person to the sheet</button>
+                                </div> 
+                            </form>
+                                                
+                        </p>
+                        <p>
+                            <form method="post", action="/reckon/{{view.name}}">
+                                {% csrf_token %}
+                                
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <label for="pay" class="input-group-text">Purchaser</label>              
+                                    </div>
+                                    <select class="form-select" name="pay" id="pay">
+                                        {% for i in people %}
+                                            <option value="{{i.name}}">{{i.name}}</option>
+                                        {% endfor %}
+                                    </select>
+        
+                                    <div class="input-group-prepend">
+                                        <label for="item" class="input-group-text">Item</label>              
+                                    </div>
+                                    {{additem.item}}
+        
+                                    <div class="input-group-prepend">
+                                        <label for="value" class="input-group-text">Cost</label>                 
+                                    </div>
+                                    {{additem.value}}
+                                    <button type="submit", name="additem", value="{{view.name}}" class="btn btn-primary btn-sm">Add new item to the sheet</button>
+                                </div>
+                                
+                            </form>
+                                
+                        </p>            
+                    </div>
+                </div>
+            </div>
+          </div>
+        <hr>
+        <div >
             <h3>Participants</h3>
             {% for i in people %}
-                <p>{{i.name}}</p>
+                <div class="input-group">
+                    <p>
+                        <!--<label for="value" class="input-group-text">{{i.name}}</label>-->
+                        <div class="input-group-prepend">
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{i.name}}" aria-expanded="false" aria-controls="collapseExample">
+                                {{i.name}}
+                            </button>
+                        </div>
+                        <div class="collapse" id="{{i.name}}">
+                            <div class="card card-body">
+                                    <form method="post", action="/reckon/{{view.name}}">
+                                        {% csrf_token %}
+                                        <div class="input-group">
+                                            {{linkperson.name}}
+                                            <button type="submit", name="linkperson", value="{{view.name}}" class="btn btn-primary btn-sm">Link Account</button>
+                                        </div> 
+                                    </form>
+                            </div>
+                          </div>
+                    </p>                 
+                </div>
+                
             {% endfor %}
         </div>
+        <hr>
         <div>
             <form method="post", action="/reckon/{{view.name}}">
                 {% csrf_token %}
@@ -71,7 +108,7 @@
                         <th>Action</th>
                         <th>Item name</th>
                         <th>Price</th>
-                        <th>Buyer</th>
+                        <th>Purchaser</th>
                         <th>Collectors</th>
                     </tr>
                     {% for i in items %}
